Enhance logging and access configuration for nacional consumer and consolidator services